--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			    	<p >Hi, my name is Ron Thomas. Welcome to my porfolio website! I am currently a third year Computer Engineering student at University of Toronto. I built this website in order to showcase some of the past projects I worked on. Feel free to check them out from the Projects tab.
 			    	</p>
 
-			    	<p >As with all portfolio websites, here are some images of me in my natural habitat! Also included memes to spice things up. (Haha sorry no professional pictures here. I just took some of the recent photos in my gallery. I would say some of them are very symbolic of my passions. Will update with proper pictures once I do a LinkedIn photoshoot one of these days!). If you still see pictures of me in sleep mode, know that I am still sleeping on my LinkedIn photoshoot (or dead).
+			    	<p >As with all portfolio websites, here are some images of me in my natural habitat! Also included memes to spice things up. (Haha sorry no professional pictures here. I just took some of the recent photos in my gallery. I would say some of them are very symbolic of my passions. Will update with proper pictures once I do a LinkedIn photoshoot one of these days!).
 			    	</p>
 
 				    <p > If you ever come across this website, please note the chances of this being up-to-date are very low (haha). If you would like to see what the recent projects I worked on are, the best bet would be to visit my GitHub page from the Projects tab. 
@@ -62,9 +62,6 @@
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
 			      <img class="d-block w-50" src="images/slide_1_1000.jpg" alt="First slide">
-			    </div>
-			    <div class="carousel-item">
-			      <img class="d-block w-50" src="images/slide_2.jpeg" alt="Second slide">
 			    </div>
 			    <div class="carousel-item">
 			      <img class="d-block w-75" src="images/slide_4.jpeg" alt="Fourth slide">
