--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			    	<p >Hi, my name is Ron Thomas. Welcome to my porfolio website! I am currently a third year Computer Engineering student at University of Toronto. I built this website in order to showcase some of the past projects I worked on. Feel free to check them out from the Projects tab.
 			    	</p>
 
-			    	<p >As with all portfolio websites, here are some images of me in my natural habitat!.
+			    	<p >As with all portfolio websites, here are some images of me in my natural habitat!
 			    	</p>
 
 				    <p > If you ever come across this website, please note the chances of this being up-to-date are very low (haha). If you would like to see what the recent projects I worked on are, the best bet would be to visit my GitHub page from the Projects tab. 
