--- a/projects_page.html
+++ b/projects_page.html
@@ -72,7 +72,7 @@
 			  <img class="card-img-top" src="images/reversi_card.png" alt="Card image cap">
 			  <div class="card-body">
 			    <h5 class="card-title">Reversi</h5>
-			    <p class="card-text">A Reversi game with a simple Computer AI and GUI. Code intially written in C but included C++ for SFML library (GUI)</p>
+			    <p class="card-text">A Reversi game with a simple Computer AI and GUI. Code intially written in C but moved to C++ for SFML library (GUI)</p>
 			     <button title="button title" class="btn btn-primary" onclick=" window.open('https://github.com/ronjoethomas/Reversi', '_blank'); return false;">GitHub Page</button>
 			  </div>
 
